<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- How does a Genetic Algorithm work? -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gutterSpaceHalf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/colorInfoCard">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorCard"
                app:srcCompat="@drawable/ic_info_outline_black_24dp"
                android:layout_margin="@dimen/gutterSpaceHalf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gutterSpaceHalf"
                android:text="@string/how_does_it_work" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Genetic Algorithm parameters -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_fileName="curved.json"
                app:lottie_loop="true" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/ga_parameters_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gutterSpaceHalf"
            app:cardBackgroundColor="@color/colorInfoCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/gutterSpaceHalf"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/lblPopSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/populationSize"
                                style="@style/InputText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/genetic_algorithm_population_size" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/lblUniformRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/uniformRate"
                                style="@style/InputText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/genetic_algorithm_uniform_rate" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/gutterSpaceHalf"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/lblMutationRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/mutationRate"
                                style="@style/InputText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/genetic_algorithm_mutation_rate" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/lblTournamentSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/tournamentSize"
                                style="@style/InputText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/genetic_algorithm_tournament_size" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Solution text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gutterSpaceHalf"
            android:paddingTop="@dimen/gutterSpace"
            android:orientation="vertical"
            android:layout_below="@id/ga_parameters_card">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblSolution"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/solution_text"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/solution_title"
                    android:text="@string/solution_suggested" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/initiateAlgorithm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genetic_algorithm_initiate"
            android:theme="@style/CustomButton" />

        <Button
            android:id="@+id/stopAlgorithm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genetic_algorithm_force_stop"
            android:theme="@style/CustomButton"/>
    </LinearLayout>

    <!-- Solution card -->
    <LinearLayout
        android:id="@+id/solution_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:cardBackgroundColor="@color/colorCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/gutterSpaceHalf">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/gutterSpaceHalf"
                    android:text="@string/solution_found"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/generation_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_visualise"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visualise_btn"
                    android:theme="@style/CustomButton" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
